2007-10-09 [colin]	3.0.2cvs44

	* src/addrduplicates.c
	* src/addressadd.c
	* src/addressadd.h
	* src/addressbook.c
	* src/addressbook.h
	* src/addrindex.c
	* src/addrindex.h
	* src/addritem.c
	* src/addritem.h
	* src/compose.c
	* src/editaddress.c
	* src/editaddress_other_attributes_ldap.h
	* src/headerview.c
	* src/messageview.c
	* src/mimeview.c
	* src/summaryview.c
	* src/textview.c
	* src/gtk/gtkutils.c
		Automatically set contacts' pictures from Face 
		or X-Face if they have no picture
		Display the contact picture in textview or
		headerview for mails sent by people in the 
		addressbook, that have no Face or X-Face
		Fix a few details in the Person edition dialog
		(ability to unset picture)
		Remove picture file when deleting contacts

2007-10-09 [iwkse]	3.0.2cvs43

	* src/gtk/about.c
		center the about window

2007-10-09 [paul]	3.0.2cvs42

	* src/prefs_toolbar.c
		fix icon selector window on maemo

2007-10-09 [paul]	3.0.2cvs41

	* src/messageview.c
		add 'go to' menu to separate msgview

2007-10-09 [colin]	3.0.2cvs40

	* src/common/defs.h
		Add forgotten file

2007-10-09 [iwkse]	3.0.2cvs39

	* Makefile.am
	* src/addressbook.c
	* src/addritem.c
	* src/addritem.h
	* src/editaddress.c
	* src/editaddress_other_attributes_ldap.h
	* src/addrbook.c
	* src/Makefile.am
		set a photo in the Addressbook

2007-10-08 [colin]	3.0.2cvs38

	* src/prefs_toolbar.c
		Make height 320 to remove the scrollbar 
		(with current number of icons)

2007-10-08 [colin]	3.0.2cvs37

	* src/prefs_toolbar.c
		Transform the treeview to a GtkIconView.
		Patch by Pawel
		In addition, transform the window so that 
		it looks like a popup menu. Patch by me

2007-10-08 [colin]	3.0.2cvs36

	* src/compose.c
	* src/compose.h
		Beautify the GUI a bit; in particular, show the
		number of attachments in the tab's title.
		Patch by Pawel

2007-10-08 [paul]	3.0.2cvs35

	* src/mimeview.c
		Save users from themselves: save temporary
		files used for Open/Open with as read-only.
		Thanks to Colin
