@@ -2957,3 +2957,4 @@
 ( cvs diff -u -r 1.30.2.44 -r 1.30.2.45 src/prefs_toolbar.c;  ) > 3.0.2cvs42.patchset
 ( cvs diff -u -r 1.4.2.52 -r 1.4.2.53 src/gtk/about.c;  ) > 3.0.2cvs43.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/addrduplicates.c;  cvs diff -u -r 1.9.2.16 -r 1.9.2.17 src/addressadd.c;  cvs diff -u -r 1.2.16.5 -r 1.2.16.6 src/addressadd.h;  cvs diff -u -r 1.60.2.101 -r 1.60.2.102 src/addressbook.c;  cvs diff -u -r 1.18.2.10 -r 1.18.2.11 src/addressbook.h;  cvs diff -u -r 1.28.2.33 -r 1.28.2.34 src/addrindex.c;  cvs diff -u -r 1.9.2.13 -r 1.9.2.14 src/addrindex.h;  cvs diff -u -r 1.13.2.14 -r 1.13.2.15 src/addritem.c;  cvs diff -u -r 1.12.2.12 -r 1.12.2.13 src/addritem.h;  cvs diff -u -r 1.382.2.414 -r 1.382.2.415 src/compose.c;  cvs diff -u -r 1.14.2.30 -r 1.14.2.31 src/editaddress.c;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/editaddress_other_attributes_ldap.h;  cvs diff -u -r 1.8.2.22 -r 1.8.2.23 src/headerview.c;  cvs diff -u -r 1.94.2.155 -r 1.94.2.156 src/messageview.c;  cvs diff -u -r 1.83.2.118 -r 1.83.2.119 src/mimeview.c;  cvs diff -u -r 1.395.2.327 -r 1.395.2.328 src/summaryview.c;  cvs diff -u -r 1.96.2.182 -r 1.96.2.183 src/textview.c;  cvs diff -u -r 1.5.2.66 -r 1.5.2.67 src/gtk/gtkutils.c;  ) > 3.0.2cvs44.patchset
+( cvs diff -u -r 1.14.2.31 -r 1.14.2.32 src/editaddress.c;  cvs diff -u -r 1.8.2.23 -r 1.8.2.24 src/headerview.c;  cvs diff -u -r 1.96.2.183 -r 1.96.2.184 src/textview.c;  ) > 3.0.2cvs45.patchset
