@@ -1,3 +1,10 @@
+2007-10-09 [colin]	3.0.2cvs45
+
+	* src/editaddress.c
+	* src/headerview.c
+	* src/textview.c
+		Add error handling
+
 2007-10-09 [colin]	3.0.2cvs44
 
 	* src/addrduplicates.c
